--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <table id="time">
         </table>
     </div>
+    <a href = "jsondata.html">click here</a>
     <script src="./resources/js/calender.js"></script>
 </body>
 </html> 
